add more models and apply edit to user model
